# QuickWire

./: CMakeLists.txt  Main.qml  README.md  SystemTray.qml  main.cpp  pipewiremodel.cpp  pipewiremodel.h
